--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1314,10 +1314,24 @@ a {
   .arrow-first{background: url(../images/arrow_icon.png) 0 0;}
   .arrow-hide{display: none;}
 /* p2-wifi */
-.float-mask{width: 100%;height: 100%;overflow: hidden;background-color: rgba(0,0,0,.5);display: none;font-size: 8rem;text-align: center;color: #fff;position:absolute;top:0;left:0;}
+/*.float-mask{width: 100%;height: 100%;overflow: hidden;background-color: rgba(0,0,0,.5);display: none;font-size: 8rem;text-align: center;color: #fff;position:absolute;top:0;left:0;}
     .float-show{z-index:1000;}
 .float-show .current .float-mask{display: block;z-index:100;opacity: 1!important;}
-
+.float-show-hide .current .float-mask{-webkit-animation-name: zoomToBig; animation-name: zoomToBig; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out;z-index: 100;}*/
+.float-mask{z-index: -1;}
+.float-show{z-index:1000;}
+.float-show .current .float-mask{z-index: 20;}
+.float-show-hide .float-mask{-webkit-animation-name: float-hide; animation-name: float-hide; -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out;}
+@-webkit-keyframes float-hide {
+  100%{opacity:0;-webkit-transform:scale3d(.3,.3,.3);transform:scale3d(.3,.3,.3)}
+  50%{opacity:1}
+  0%{opacity:1}
+}
+@keyframes float-hide {
+  100%{opacity:0;-webkit-transform:scale3d(.3,.3,.3);transform:scale3d(.3,.3,.3)}
+  50%{opacity:1}
+  0%{opacity:1}
+}
 </style>
 </head>
 <body>
@@ -1377,7 +1391,7 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_5s  float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
         </div>
     </div>
     <div class="J_opaPannel pannels scene-2" data-index="1">
@@ -1474,7 +1488,7 @@ a {
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail1-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_5s float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-1.jpg"></div></div>
         </div>
     </div>
 <div class="J_opaPannel pannels scene-3" data-index="2">
@@ -1611,7 +1625,7 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_5s float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
         </div>
     </div>
 <!-- S scene4 -->
@@ -1753,7 +1767,7 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_5s float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
         </div>
     </div>
 <!-- E scene4 -->
@@ -1795,7 +1809,7 @@ a {
                     </div>
                 </div>
             </div>
-            <div class="mc mc-image delay_0_0s duration_0_5s mi-zoomIn float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_5s float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
         </div>
     </div>
 <!-- E scene5 -->
@@ -1916,7 +1930,6 @@ a {
       var count = load.count
       var total = load.total
       progress && (progress.innerHTML = Math.round(100*count/total) + '%')
-      console.log(progress.innerHTML);
       if(count === total) return complete()
     }
 
@@ -2091,70 +2104,42 @@ new PreLoad(tasks, {onload: loading});
         }, 100);
 
 
-        var floatDom = document.querySelectorAll('.mc');//.getAttribute('data-last');
+        var floatDom = document.querySelectorAll('.mc');
         var floatMask = document.querySelectorAll('.float-mask');
         for (var i = 0; i < floatDom.length; i++) {
             if (floatDom[i].hasAttribute('data-detail')) {
                 var t = floatDom[i].getAttribute('data-detail');
-
-                if (t.indexOf('1-') > -1) {
-                    floatDom[i].addEventListener(evs.touchup, function (ev) {
-                        App.Utils.addClass(document.getElementById('J_opaPage'), 'float-show');
-                        return false;
-                    }, false);
-                }
-                else if (t.indexOf('2-') > -1) {
-                    floatDom[i].addEventListener(evs.touchup, function (ev) {
-                        var tDom = this.parentNode.querySelector('.float-mask .mc-wrap');
+                floatDom[i].addEventListener(evs.touchup, function (ev) {
+                    var t1 = this.getAttribute('data-detail');
+                    var tDom = this.parentNode.querySelector('.float-mask .mc-wrap');
+                    App.Utils.removeClass(opaPage, 'float-show-hide');
+                    App.Utils.addClass(opaPage, 'float-show');
+                    App.Utils.addClass(this.parentNode.querySelector('.float-mask'), 'mi-zoomIn');
+                    if(t1.indexOf('1-') > -1){}
+                    else if(t1.indexOf('2-') > -1){
                         tDom.innerHTML = '<img src="../images/detail/detail2-' + this.getAttribute('data-detail').split('2-')[1] + '.jpg">';
-                        App.Utils.addClass(document.getElementById('J_opaPage'), 'float-show');
-                        return false;
-                    }, false);
-                }
-                else if (t.indexOf('3-') > -1) {
-                    floatDom[i].addEventListener(evs.touchup, function (ev) {
-                        var tDom = this.parentNode.querySelector('.float-mask .mc-wrap');
+                    }
+                    else if(t1.indexOf('3-') > -1){
                         tDom.innerHTML = '<img src="../images/detail/detail3-' + this.getAttribute('data-detail').split('3-')[1] + '.jpg">';
-                        App.Utils.addClass(document.getElementById('J_opaPage'), 'float-show');
-                        return false;
-                    }, false);
-                }
-                else if (t.indexOf('4-') > -1) {
-                    floatDom[i].addEventListener(evs.touchup, function (ev) {
-                        var tDom = this.parentNode.querySelector('.float-mask .mc-wrap');
+                    }
+                    else if(t1.indexOf('4-') > -1){                        
                         tDom.innerHTML = '<img src="../images/detail/detail4-' + this.getAttribute('data-detail').split('4-')[1] + '.jpg">';
-                        App.Utils.addClass(document.getElementById('J_opaPage'), 'float-show');
-                        return false;
-                    }, false);
-                }
-                else if (t.indexOf('5-') > -1) {
-                    floatDom[i].addEventListener(evs.touchup, function (ev) {
-                        App.Utils.addClass(document.getElementById('J_opaPage'), 'float-show');
-                        return false;
-                    }, false);
-                }
-
+                    }
+                    else if(t1.indexOf('5-') > -1){
+                        
+                    }
+                    return false;
+                }, false);
 
             }
         }
         for (var i = 0; i < floatMask.length; i++) {
             floatMask[i].addEventListener(evs.touchup, function (ev) {
-                console.log(this);
-                App.Utils.removeClass(document.getElementById('J_opaPage'), 'float-show');
+                App.Utils.removeClass(opaPage, 'float-show');
+                 App.Utils.addClass(opaPage, 'float-show-hide');
                 return false;
             }, false);
         }
-
-        /*floatDom.addEventListener(evs.touchdown, function(ev){
-            console.log('wifi touched');
-        }, false);*/
-        // debugger;
-        /*floatDom.addEventListener(evs.touchup, function(ev){
-            console.log(this);
-            App.Utils.addClass(floatMask,'show');
-            return false;
-        }, false);*/
-
     };
 
     var evt = "onorientationchange" in window ? "orientationchange" : "resize",
