--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1340,7 +1340,7 @@ a {
 <div class="loading" id="J_MiLoading">
     <div class="loading-block">
         <img class="loading-img" src="http://img13.360buyimg.com/cms/jfs/t283/206/913455934/6017/6f27d16f/5429103aN9bed6283.gif">
-        <div class="loading-text j-loading-text" id="process">66%</div>
+        <div class="loading-text j-loading-text" id="process"></div>
     </div>
 </div>
 
