--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1547,7 +1547,7 @@ a {
                                 </div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_5s duration_0_4s mi-zoomIn p3-icon1 p-icon" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate" data-detail="detail3-">
+            <div class="mc mc-image delay_0_5s duration_0_4s mi-zoomIn p3-icon1 p-icon" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate" data-detail="detail3-1">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
                     <div class="icon icon-3-1"></div>
                 </div>
