--- a/hkhl/b2b.html
+++ b/hkhl/b2b.html
@@ -1054,6 +1054,10 @@ a {
     .scene-3 .title{left: 197px;background-position: 0 -160px;}
     .scene-4 .title{left: 197px;background-position: 0 -320px;}
     .scene-5 .title{left: 205px;top:130px;width: 337px;height: 138px;background-position: 0 -480px;}
+    .img-1-plane{background-position: 0 -837px;width: 306px;height: 148px;}
+    .img-1-logo{background-position: 0 -724px;width: 355px;height: 113px;}
+    .img-1-slogan{background-position: 0 -985px;width: 361px;height: 78px;}
+    .img-1-about{background-position: 0 -643px;width: 239px;height: 81px;}
     /* p2 */
     .scene-2 .stage{background-image: url('../images/p2/p2_bg.jpg'); background-color: rgb(153, 153, 153);}
 
@@ -1365,33 +1369,29 @@ a {
             <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p1-plane" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
 
-                                <div class="img-wrap" style="width: 100%; height: 100%;"><img src="../images/1_plane.png" style="width: 100%; height: 100%; margin: 0px;">
-                                </div>
+                                <div class="img-wrap"><div class="img-1-plane title"></div></div>
                             </div>
                         </div>
             
             <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p1-logo" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                 <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
 
-                    <div class="img-wrap" style="width: 100%; height: 100%;"><img src="../images/1_logo.png" style="width: 100%; height: 100%; margin: 0px;">
-                    </div>
+                    <div class="img-wrap"><div class="img-1-logo title"></div></div>
                 </div>
             </div>
             <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p1-slogan" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
 
-                                <div class="img-wrap" style="width: 100%; height: 100%;"><img src="../images/1_slogan.png" style="width: 100%; height: 100%; margin: 0px;">
-                                </div>
+                                <div class="img-wrap"><div class="img-1-slogan title"></div></div>
                             </div>
                         </div>
             <div class="mc mc-image delay_0_0s duration_0_8s mi-zoomIn p1-about" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate" data-detail="detail1-1">
                             <div class="mc-wrap delay_1_8s duration_0_8s noAnimate">
 
-                                <div class="img-wrap" style="width: 100%; height: 100%;"><img src="../images/1_aboutus.png" style="width: 100%; height: 100%; margin: 0px;">
-                                </div>
+                                <div class="img-wrap"><div class="img-1-about title"></div></div>
                             </div>
                         </div>
-            <div class="mc mc-image delay_0_0s duration_0_5s  float-mask" data-type="image" data-anim="mi-zoomIn" data-duration="0.8" data-out-delay="1" data-out-duration="0.8" data-aspect="4.275862068965517" data-position="1" data-delay="0" data-out-anim="noAnimate"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
+            <div class="mc mc-image delay_0_0s duration_0_5s  float-mask"><div class="mc-wrap delay_1_8s duration_0_8s noAnimate"><img src="../images/detail/detail2-2.jpg"></div></div>
         </div>
     </div>
     <div class="J_opaPannel pannels scene-2" data-index="1">
